[package]

name = "simpleflake"
version = "1.0.0"
authors = ["Marcin Szewczyk <ms@anixe.pl>"]
description = "Distributed ID generation in Rust for the lazy."
repository = "https://github.com/anixe/simpleflake-rs"
readme = "README.md"
keywords = ["simpleflake", "uuid", "id"]
license = "MIT"

[dependencies]
time = "0.1.42"
rand = "0.7.3"
